# emerging-crises

./: .env.example  .gitignore  README.md  environment.yml  main.py  pixi.toml  pyproject.toml  setup.py
.github/workflows/: tests.yml
demos/: 0.Introduction.ipynb  1.DataPreparation.ipynb  3.FeatureSelection.ipynb  5.LSTMClassifier.ipynb  6.FeatureSpace.ipynb  README.md
docs/: README.md
docs/data/: data_utilities.md  features.md  loader.md  log_utilities.md  processor.md  splitter.md  transformer.md
docs/features/: README.md  base.md  pca.md  temporal_pca.md  tsne.md  umap.md  unet.md  utilities.md  vae.md
docs/model/: README.md  architectures.md  classifiers.md  dataset.md  loss.md  rolling_model.md  tuning.md  utilities.md
docs/visualizations/: auc.md  labels.md  timeline.md  utilities.md
src/: __init__.py  build.sh  config.json
src/data/: __init__.py  data_utilities.py  features.py  loader.py  log_utilities.py  processor.py  splitter.py  transformer.py
src/features/: __init__.py  base.py  pca.py  temporal_pca.py  tsne.py  umap.py  unet.py  utilities.py  vae.py
src/model/: __init__.py  architectures.py  classifiers.py  dataset.py  loss.py  rolling_model.py  tuning.py  utilities.py
src/visualizations/: __init__.py  auc.py  labels.py  timeline.py  utilities.py
tests/: test_config.json  test_crises.csv  test_crises.xlsx  test_data_utilities.py  test_loader.py  test_log_utilities.py
